// TODO message结构的属性名请使用 驼峰小写字母开始
// TODO enum枚举的属性名请使用 驼峰大写字母开始
syntax = "proto3";
option go_package = "lucky/server/gen/msg";
package pb;





message None {
}

// EmptyResponse 通用的空返回消息，用于不需要返回数据的请求
message EmptyResponse {
}

message Bool {
  bool value = 1;
}

message Int32 {
  int32 value = 1;
}

message Int64 {
  int64 value = 1;
}

// UuidRange UUID 范围
message UuidRange {
  int64 start = 1;  // 起始值（包含）
  int64 end = 2;    // 结束值（包含）
}

message Double {
  double value = 1;
}

message String {
  string value = 1;
}

message Int64Int32 {
  int64 key = 1;
  int32 value = 2;
}

message Int64Int64 {
  int64 key = 1;
  int64 value = 2;
}

message Int32Int32 {
  int32 key = 1;
  int32 value = 2;
}

message Int32Int64 {
  int32 key = 1;
  int64 value = 2;
}

message Int32List {
  repeated int32 list = 1;
}

message Int64List {
  repeated int64 list = 1;
}

message Int32Map {
  map<int32, int32> value = 1;
}

message Int32Int64Map {
  map<int32, int64> value = 1;
}

message StringKeyValue {
  string key = 1;
  string value = 2;
}